<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3ECEB"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".NewRecipeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/new_recipe"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hint_recipe"
            android:inputType="textAutoComplete"
            android:padding="6dp"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/new_wantToMake"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="#E3ECEB"
            android:padding="6dp"
            android:layout_marginLeft="10dp"
            app:srcCompat="@drawable/star_outline_24px" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:text="Tags"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_tag"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/montserrat"
            android:hint="@string/hint_tag"
            android:inputType="textAutoComplete"
            android:padding="6dp"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/prepTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:text="Prep Time"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_prepTime"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/montserrat"
            android:padding="6dp"
            android:textSize="18sp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:inputType="number"/>

        <TextView
            android:id="@+id/tag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:text="Cook Time"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/new_cookTime"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/montserrat"
            android:padding="6dp"
            android:textSize="18sp"
            android:ems="10"
            android:inputType="number"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/new_ingredientsTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="Ingredients"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/new_ingredients"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:background="@drawable/rounded_corner"/>

    <TextView
        android:id="@+id/new_instructionsTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="Instructions"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/new_instructions"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:background="@drawable/rounded_corner"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/button_save"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_corner_green"
            android:enabled="false"
            android:fontFamily="@font/montserrat"
            android:text="@string/save_recipe_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_corner_green"
            android:fontFamily="@font/montserrat"
            android:text="@string/cancel_recipe_button"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>