<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E3ECEB"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".EditRecipeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/edit_recipe_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/rounded_corner"
                tools:srcCompat="android:drawable/picture_frame" />

            <ImageButton
                android:id="@+id/edit_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:padding="6dp"
                app:srcCompat="@drawable/ic_edit_24px"
                android:layout_marginTop="-75dp"
                android:layout_marginLeft="310dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_recipe"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/montserrat"
                android:hint="@string/hint_recipe"
                android:inputType="textAutoComplete"
                android:padding="6dp"
                android:textSize="18sp" />

            <ImageButton
                android:id="@+id/edit_want_to_make"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:background="#E3ECEB"
                android:padding="6dp"
                app:srcCompat="@drawable/star_outline_24px" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/edit_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat"
                android:text="Tags"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_tag"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/montserrat"
                android:hint="@string/hint_tag"
                android:inputType="textAutoComplete"
                android:padding="6dp"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/edit_prepTimeTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat"
                android:text="Prep Time"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_prepTime"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/montserrat"
                android:inputType="textAutoComplete"
                android:padding="6dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/edit_cookTimeTag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat"
                android:text="Cook Time"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_cookTime"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_corner"
                android:fontFamily="@font/montserrat"
                android:inputType="textAutoComplete"
                android:padding="6dp"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/edit_ingredientsTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:text="Ingredients"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_ingredients"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine|textAutoComplete" />

        <TextView
            android:id="@+id/edit_instructionsTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:text="Instructions"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_instructions"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine|textAutoComplete" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_corner_green"
                android:fontFamily="@font/montserrat"
                android:onClick="updateRecipe"
                android:text="@string/update_recipe_button"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/rounded_corner_green"
                android:fontFamily="@font/montserrat"
                android:onClick="cancelUpdate"
                android:text="@string/cancel_recipe_button"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>